--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     >
     <ImageView
-        android:id="@+id/beg_image_view"
+        android:id="@+id/background_image_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/h"
@@ -36,6 +36,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
     <Button
+        android:id="@+id/login_button_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="LOGIN"
