--- a/app/src/main/res/layout/products.xml
+++ b/app/src/main/res/layout/products.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     >
     <ImageView
-        android:id="@+id/beg_image_view"
+        android:id="@+id/head_image_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/b"
@@ -16,27 +16,27 @@
         android:layout_alignParentStart="true" />
 
     <Button
-        android:id="@+id/open1_text_view"
+        android:id="@+id/item1_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="30sp"
         android:text="CAKES"
         android:onClick="onclick"
-        android:layout_above="@+id/open2_text_view"
+        android:layout_above="@+id/item2_text_view"
         android:layout_centerHorizontal="true"
         android:textColor="#304ffe"/>
     <Button
-        android:id="@+id/open2_text_view"
+        android:id="@+id/item2_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="30sp"
         android:text="PASTRIES"
         android:onClick="onclick"
-        android:layout_above="@+id/open3_text_view"
+        android:layout_above="@+id/item3_text_view"
         android:layout_centerHorizontal="true"
         android:textColor="#304ffe"/>
     <Button
-        android:id="@+id/open3_text_view"
+        android:id="@+id/item3_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="30sp"
